--- a/src/MA/UserBundle/Resources/views/User/content.html.twig
+++ b/src/MA/UserBundle/Resources/views/User/content.html.twig
@@ -25,7 +25,91 @@
 			        <!-- END nav admin -->
 
 				  	<div id="section_admin" class="row center">
-				  		Partie vide pour l'instant	
+				  		<div class="row92">
+			    			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 left">
+								<br/><br/>
+								<div class="thumbnail thumbnail_page">
+									<h3 class="left">
+										Pages :
+									</h3>
+									{% if pages|length > 0 %}
+										<ul class="list_no_style_li list_pages_admin">
+											{% for single_page in pages %}
+												<li class="page_link {% if single_page == pageAsked %}li_page_active{% endif %}" id="page_n_{{ single_page.id }}">
+													<a href="javascript:displaySelectedPage('{{ path('ma_user_content_spe', {'pageId':single_page.id}) }}', 'page_n_{{ single_page.id }}')" class="no_style_a">
+														{{ single_page.name|truncate(40, false, '...') }}
+														<span class="float-right arrow_page">
+															<img src="{{ asset('img/system/defaults/right_arrow_spe.png') }}" alt=""/>
+														</span>
+														<span class="float-right date_page">
+															{% if single_page.updatedAt|length > 0 %}
+																{{ single_page.updatedAt|date('d M Y') }}
+															{% else %}
+																(Vide)
+															{% endif %}
+														</span>
+													</a>
+												</li>
+											{% endfor %}
+										</ul>
+									{% else %}
+										Aucune page
+									{% endif %}
+								</div>
+							</div>
+
+							<div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 ">
+								<div id="page_content_content">
+									<br/>
+									<div class="row">
+					    				{% if pages|length > 0 %}
+					    				<a class="btn btn-action-admin float-right"  href="{{ path('ma_user_content_edit', {'pageId':pageAsked.id}) }}">
+					    					Modifier
+					    				</a>
+					    				{% endif %}
+					    			</div>
+					    			<br/>
+					    			<div class="row left">
+					    				
+										{% if pageAsked %}
+											<div class="">
+												<div class="row">
+													<h4>
+														{% if pageAsked.title|length > 0 %}
+															{{ pageAsked.title|raw }}
+														{% else %}
+															(Titre vide)
+														{% endif %}
+													</h4>
+													<div class="center date_page_lg">
+														{% if pageAsked.updatedAt|length > 0 %}
+															le {{ pageAsked.updatedAt|date('d M Y') }} à {{ pageAsked.updatedAt|date('H:i') }}
+														{% else %}
+															(date vide)
+														{% endif %}
+													</div>
+													{% if pageAsked.updatedAt|length > 0 %}
+													<div class="center">
+														<strong>Nom DB: </strong>{{ pageAsked.dataBaseName }}
+													</div>
+													{% endif %}
+												</div>
+
+												<br/>
+												
+												<div class="row80">
+													{% if pageAsked.content|length > 0 %}
+														{{ pageAsked.content|raw }}
+													{% else %}
+														(page vide)
+													{% endif %}
+												</div>
+											</div>
+										{% endif %}
+					    			</div>
+								</div>
+							</div>
+		    			</div>
 
 
 				  		<!-- ADMIN JAVASCRIPTS -->
