--- a/app/Resources/views/includes/modals.html.twig
+++ b/app/Resources/views/includes/modals.html.twig
@@ -1,14 +1,16 @@
 <!-- Modal photos  -->
 <div class="modal fade modal_for_photo" id="modal_photos" tabindex="-1" role="dialog" aria-labelledby="modal_photosLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-body">
-        <!-- <button type="button" class="close float-right"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button> -->
-        <!-- Indicators -->
-        <a href="" data-dismiss="modal">
-          <img src="" alt="Photo" class="carousel_photo" id="photo_in_carousel_toReplace"/>
-        </a>
-      </div>
+  <div class="vertical-alignment-helper">
+    <div class="modal-dialog vertical-align-center">
+        <div class="modal-content">
+            <div class="modal-body">
+              <!-- <button type="button" class="close float-right"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button> -->
+              <!-- Indicators -->
+              <a href="" data-dismiss="modal">
+                <img src="" alt="Photo" class="carousel_photo" id="photo_in_carousel_toReplace"/>
+              </a>
+            </div>
+        </div>
     </div>
   </div>
 </div>
