--- a/src/MA/UserBundle/Resources/views/User/aides.html.twig
+++ b/src/MA/UserBundle/Resources/views/User/aides.html.twig
@@ -26,10 +26,13 @@
 
 				  	<div id="section_admin" class="row center">
 						<div class="row">
-				    		<div class="row90 left">
-				    			<a href="{{ path('ma_user_aides_new') }}" class="btn btn-admin">
+				    		<div class="row left">
+				    			<a href="{{ path('ma_user_aides_new') }}" class="btn btn-admin float-left">
 				    				Nouvelle aide
 				    			</a>
+				    			<p class="center italic red">
+			    					<strong>ATTENTION : L'ordre commence à 2 parce que le 1 correspond au don direct.</strong>
+			    				</p>
 				    		</div>
 				    		{% if aides|length > 0 %}
 								<div class="table-responsive">
@@ -37,7 +40,10 @@
 			                        <thead>
 			                          <tr>
 			                            <th class="center">
-			                              Id
+			                              	Ordre
+			                            </th>
+			                            <th class="center">
+			                              	En-tête
 			                            </th>
 			                            <th class="center">
 			                              	Image
@@ -46,13 +52,10 @@
 			                              	Nom
 			                            </th>
 			                            <th class="center">
-			                              	#
-			                            </th>
-			                            <th class="center">
-			                              	En-tête
-			                            </th>
-			                            <th class="center">
 			                              	Description
+			                            </th>
+			                            <th class="center">
+			                              	Prix
 			                            </th>
 			                            <th class="center">
 			                              	Créé le
@@ -71,24 +74,6 @@
 			                        <tbody>
 			                          {% for aide in aides %}
 			                            <tr>
-			                            	<th class="center">
-				                              {{ aide.id }}
-				                            </th>
-				                            <td class="center">
-				                              	{% if aide.alt|length > 0 and aide.url|length > 0 %}
-													<div class="product_img_admin" style="background-image: url('{{ asset(aide.webPath) }}'); background-size: cover; background-position: 50%;">
-													</div>
-												{% else %}
-													<img src="{{ asset('img/system/defaults/default_img.png') }}" alt="Default" class="product_img_admin"/>
-												{% endif %}
-				                            </td>
-				                            <td class="center">
-				                              	{% if aide.name|length > 0 %}
-				                              		{{ aide.name }}
-				                              	{% else %}
-				                              		---
-				                              	{% endif %}
-				                            </td>
 				                            <td class="center">
 				                              	{% if aide.orderList|length > 0 %}
 				                              		{{ aide.orderList }}
@@ -104,10 +89,33 @@
 				                              	{% endif %}
 				                            </td>
 				                            <td class="center">
+				                              	{% if aide.alt|length > 0 and aide.url|length > 0 %}
+													<div class="aide_img_admin" style="background-image: url('{{ asset(aide.webPath) }}'); background-size: cover; background-position: 50%;">
+													</div>
+												{% else %}
+													<div class="aide_img_admin" style="background-image: url('{{ asset('img/system/defaults/default_img.png') }}'); background-size: cover; background-position: 50%;" alt="Default" >
+													</div>
+												{% endif %}
+				                            </td>
+				                            <td class="center">
+				                              	{% if aide.name|length > 0 %}
+				                              		{{ aide.name }}
+				                              	{% else %}
+				                              		---
+				                              	{% endif %}
+				                            </td>
+				                            <td class="center">
 				                              	{% if aide.description|length > 0 %}
 				                              		{{ aide.description | truncate(100, false, '...')  }}
 				                              	{% else %}
 				                              		---
+				                              	{% endif %}
+				                            </td>
+				                            <td class="center">
+				                              	{% if aide.price|length > 0 %}
+				                              		{{ aide.price }} €
+				                              	{% else %}
+				                              		-
 				                              	{% endif %}
 				                            </td>
 				                            <td class="center">
@@ -125,12 +133,12 @@
 				                              	{% endif %}
 				                            </td>
 				                            <th class="center hover_popup">
-				                            	{% if aide.active %}
-				                              		{% if aide.active == "active" %}
+				                            	{% if aide.status %}
+				                              		{% if aide.status == "active" %}
 				                              			Active
-				                              		{% elseif aide.active == "toCome" %}
+				                              		{% elseif aide.status == "toCome" %}
 				                              			A venir
-				                              		{% elseif aide.active == "inactive" %}
+				                              		{% elseif aide.status == "inactive" %}
 				                              			Inactive
 				                              		{% else %}
 				                              			Erreur
@@ -146,10 +154,10 @@
 				                              	{% endif %}
 				                            </th>
 				                            <td class="center">
-				                            	<a href="javascript:loadContentAdmin('{{ path('ma_user_aides_edit', {'aideId':aide.id}) }}')" class="btn btn-action-admin">
+				                            	<a href="javascript:loadContentAdmin('{{ path('ma_user_aides_edit', {'aideId':aide.id}) }}')" class="btn btn-action-admin-icon">
 					                            	<span class="glyphicon glyphicon-pencil"></span>
 				                            	</a>
-				                            	<a href="javascript:areYouSureDeleteAide('{{ path('ma_user_aides_delete', {'aideId':aide.id}) }}')" class="btn btn-action-admin">
+				                            	<a href="javascript:areYouSureDeleteAide('{{ path('ma_user_aides_delete', {'aideId':aide.id}) }}')" class="btn btn-action-admin-icon">
 					                            	<span class="glyphicon glyphicon-trash"></span>
 				                            	</a>
 				                            </td>
