--- a/src/MA/UserBundle/Resources/views/User/diapos.html.twig
+++ b/src/MA/UserBundle/Resources/views/User/diapos.html.twig
@@ -27,10 +27,12 @@
 				  	<div id="section_admin" class="row center">
 				  		<div class="row92">
 							<div class="row">
-								<br/>
 			    				<a class="btn btn-action-admin float-left" href="javascript:loadContentAdmin('{{ path('ma_user_diapos_new') }}')">
 			    					Ajouter
 			    				</a>
+			    				<p class="center italic">
+			    					Si les photos ne s'affichent pas en carré, rafraîchir la page.
+			    				</p>
 			    			</div>
 
 			    			<br/>
@@ -40,8 +42,13 @@
 									{% for diapo in diapos %}
 										<div class="col-md-2 col-xs-2 diapo_admin">
 											<div class="article_diapo_container">
-												<div class="diapo_default" style="width: 100%; min-height:100px; background-image: url('{{ asset( diapo.webPath) }}'); background-size: cover; background-position: 50%;" alt="{{ diapo.alt }}">
-							                    </div>
+												{% if diapo.alt|length > 0 and diapo.url|length > 0 %}
+													<div class="diapo_default" style="width: 100%; min-height:100px; background-image: url('{{ asset( diapo.webPath) }}'); background-size: cover; background-position: 50%;" alt="{{ diapo.alt }}">
+								                    </div>
+												{% else %}
+													<div class="diapo_default" style="background-size: 100%; background-image: url('{{ asset('img/system/defaults/default_img.png') }}'); background-size: cover; background-position: 50%;">
+													</div>
+												{% endif %}
 											</div>
 											<div class="row">
 												<strong>
